# edr

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
app/: globals.css  layout.tsx  page.tsx
components/: theme-provider.tsx
components/edr/: alert-overlay.tsx  app-header.tsx  export-button.tsx  graph-nodes.tsx  graph-toolbar.tsx  hud-query-bar.tsx  ioc-matches-view.tsx  main-canvas.tsx  minimap.tsx  network-connections-view.tsx  network-graph-view.tsx  process-inspector.tsx  process-tree-view.tsx  settings-view.tsx  sidebar.tsx  subnet-dashboard.tsx  telemetry-panel.tsx
components/ui/: sonner.tsx
hooks/: use-global-threat-score.ts  use-ioc-store.ts  use-network-connections.ts  use-process-graph.ts  use-system-metrics.ts  use-telemetry-events.ts  use-threat-alerts.ts
lib/: graph-types.ts  ioc-types.ts  ipc.ts  layout.ts  mock-graph-data.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: geo.rs  lib.rs  main.rs
src-tauri/src/commands/: control.rs  hashing.rs  ioc.rs  mod.rs  network.rs  processes.rs  settings.rs  system.rs
src-tauri/src/monitor/: worker.rs
